output base directory can be specified by TXPOOL_TEST_DIR

--- a/substrate/client/transaction-pool/Cargo.toml
+++ b/substrate/client/transaction-pool/Cargo.toml
@@ -49,6 +49,7 @@ tracing = { workspace = true, default-features = true }
 [dev-dependencies]
 anyhow = { workspace = true }
 assert_matches = { workspace = true }
+chrono = { workspace = true }
 criterion = { workspace = true, default-features = true }
 sc-block-builder = { workspace = true, default-features = true }
 sp-consensus = { workspace = true, default-features = true }
@@ -60,5 +61,4 @@ tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
 # call .submit_transactions_ignoring_follow_events
 txtesttool = { version = "0.5.0", package = "substrate-txtesttool", path="/home/miszka/parity/14-txpool-forks/sender/excercises/tx-test-tool" }
-zombienet-configuration = { workspace = true }
 zombienet-sdk = { workspace = true }
