--- a/substrate/frame/root-offences/Cargo.toml
+++ b/substrate/frame/root-offences/Cargo.toml
@@ -52,6 +52,7 @@ std = [
 	"sp-io/std",
 	"sp-runtime/std",
 	"sp-staking/std",
+	"sp-core/std"
 ]
 runtime-benchmarks = [
 	"frame-election-provider-support/runtime-benchmarks",
