--- a/substrate/frame/staking-async/ahm-test/Cargo.toml
+++ b/substrate/frame/staking-async/ahm-test/Cargo.toml
@@ -45,7 +45,7 @@ pallet-staking = { workspace = true, default-features = true }
 
 [features]
 std = [
-	"log/std"
+	"log/std",
 ]
 try-runtime = [
 	"pallet-balances/try-runtime",
@@ -55,13 +55,13 @@ try-runtime = [
 	"pallet-staking-async-rc-client/try-runtime",
 	"pallet-staking-async/try-runtime",
 
-	"pallet-session/try-runtime",
-	"pallet-staking-async-ah-client/try-runtime",
 	"frame-election-provider-support/try-runtime",
 	"frame-support/try-runtime",
+	"frame/try-runtime",
 	"pallet-authorship/try-runtime",
 	"pallet-election-provider-multi-block/try-runtime",
 	"pallet-root-offences/try-runtime",
+	"pallet-session/try-runtime",
+	"pallet-staking-async-ah-client/try-runtime",
 	"pallet-timestamp/try-runtime",
-	"frame/try-runtime"
 ]
