--- a/substrate/frame/staking-async/Cargo.toml
+++ b/substrate/frame/staking-async/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "pallet-staking-async"
-version = "28.0.0"
+version = "0.0.1"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
 homepage.workspace = true
 repository.workspace = true
-description = "FRAME pallet staking"
-readme = "README.md"
+description = "FRAME pallet staking async"
 
 [lints]
 workspace = true
