--- a/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/parachain/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.15.0"
 authors.workspace = true
 edition.workspace = true
 description = "A parachain runtime for staking-async"
-license = "Apache-2.0"
+license.workspace = true
 homepage.workspace = true
 repository.workspace = true
 
