--- a/substrate/zombienet-sdk/Cargo.toml
+++ b/substrate/zombienet-sdk/Cargo.toml
@@ -11,5 +11,7 @@ publish = false
 anyhow = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+subxt = { workspace = true }
+subxt-signer = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 zombienet-sdk = { workspace = true }
