--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -199,7 +199,7 @@ jobs:
         run: |
           mv ${{ matrix.binary }} ${{ matrix.binary }}-aarch64-apple-darwin
           mv ${{ matrix.binary }}.asc ${{ matrix.binary }}-aarch64-apple-darwin.asc
-          mv ${{ matrix.binary }}.sha256 ${{ matrix.binary }}-aarch64-apple-darwin.sha256
+          sha256sum "${{ matrix.binary }}" | tee "${{ matrix.binary }}-aarch64-apple-darwin.sha256"
 
       - name: Generate content write token for the release automation
         id: generate_write_token
