add to required jobs

--- a/.github/workflows/build-publish-images.yml
+++ b/.github/workflows/build-publish-images.yml
@@ -645,6 +645,7 @@ jobs:
       - build-test-collators
       - build-malus
       - build-linux-substrate
+      - build-templates-node
     if: always() && !cancelled()
     steps:
       - run: |
