--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -117,7 +117,7 @@ jobs:
         with:
             app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
             private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
-            owner: paritytech
+            owner: EgorPopelyaev
             repositories: polkadot-sdk
 
       - name: Create draft release
@@ -126,7 +126,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate_write_token.outputs.token }}
         run: |
           gh release create ${{ env.REL_TAG }} \
-            --repo paritytech/polkadot-sdk \
+            --repo EgorPopelyaev/polkadot-sdk \
             --draft \
             --title "Polkadot ${{ env.REL_TAG }}" \
             --notes-file ${{ github.workspace}}/scripts/release/RELEASE_DRAFT.md
@@ -170,7 +170,7 @@ jobs:
           mv "${{ env.ASSET }}" "$VERSIONED_ASSET"
 
           gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-            --repo paritytech/polkadot-sdk "$VERSIONED_ASSET"
+            --repo EgorPopelyaev/polkadot-sdk "$VERSIONED_ASSET"
 
   publish-release-artifacts:
     needs: [ validate-inputs, publish-release-draft ]
@@ -217,13 +217,13 @@ jobs:
         run: |
           if [[ ${{ matrix.target }} == "aarch64-apple-darwin" ]]; then
             gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-              --repo paritytech/polkadot-sdk \
+              --repo EgorPopelyaev/polkadot-sdk \
               ${{ matrix.binary }}-aarch64-apple-darwin \
               ${{ matrix.binary }}-aarch64-apple-darwin.asc \
               ${{ matrix.binary }}-aarch64-apple-darwin.sha256
           else
             gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-              --repo paritytech/polkadot-sdk \
+              --repo EgorPopelyaev/polkadot-sdk \
               ${{ matrix.binary }} \
               ${{ matrix.binary }}.asc \
               ${{ matrix.binary }}.sha256
@@ -248,4 +248,4 @@ jobs:
           server: m.parity.io
           message: |
             **New version of polkadot tagged**: ${{ needs.validate-inputs.outputs.release_tag }}<br/>
-            And release draft is release created in [polkadot-sdk repo](https://github.com/paritytech/polkadot-sdk/releases)
+            And release draft is release created in [polkadot-sdk repo](https://github.com/EgorPopelyaev/polkadot-sdk/releases)
