Update one more token to test

--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -205,8 +205,8 @@ jobs:
         id: generate_write_token
         uses: actions/create-github-app-token@v1
         with:
-            app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
-            private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
+            app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
+            private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
             owner: EgorPopelyaev
             repositories: polkadot-sdk
 
