possibly fix the FullIdentification shitshow -- need to double check + write backwards compatibility tests for it

--- a/substrate/primitives/staking/Cargo.toml
+++ b/substrate/primitives/staking/Cargo.toml
@@ -17,6 +17,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { features = ["derive"], workspace = true }
+log = { workspace = true, default-features = false }
 impl-trait-for-tuples = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { features = ["alloc", "derive"], optional = true, workspace = true }
@@ -32,5 +33,6 @@ std = [
 	"serde/std",
 	"sp-core/std",
 	"sp-runtime/std",
+	"log/std",
 ]
 runtime-benchmarks = ["sp-runtime/runtime-benchmarks"]
