--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -115,9 +115,9 @@ jobs:
         id: generate_write_token
         uses: actions/create-github-app-token@v1
         with:
-            app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
-            private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
-            owner: EgorPopelyaev
+            app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
+            private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
+            owner: paritytech
             repositories: polkadot-sdk
 
       - name: Create draft release
@@ -126,7 +126,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate_write_token.outputs.token }}
         run: |
           gh release create ${{ env.REL_TAG }} \
-            --repo EgorPopelyaev/polkadot-sdk \
+            --repo paritytech/polkadot-sdk \
             --draft \
             --title "Polkadot ${{ env.REL_TAG }}" \
             --notes-file ${{ github.workspace}}/scripts/release/RELEASE_DRAFT.md
@@ -157,9 +157,9 @@ jobs:
         id: generate_write_token
         uses: actions/create-github-app-token@v1
         with:
-            app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
-            private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
-            owner: EgorPopelyaev
+            app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
+            private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
+            owner: paritytech
             repositories: polkadot-sdk
 
       - name: Upload compressed ${{ matrix.chain }} v${{ env.SPEC }} wasm
@@ -170,7 +170,7 @@ jobs:
           mv "${{ env.ASSET }}" "$VERSIONED_ASSET"
 
           gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-            --repo EgorPopelyaev/polkadot-sdk "$VERSIONED_ASSET"
+            --repo paritytech/polkadot-sdk "$VERSIONED_ASSET"
 
   publish-release-artifacts:
     needs: [ validate-inputs, publish-release-draft ]
@@ -209,9 +209,9 @@ jobs:
         id: generate_write_token
         uses: actions/create-github-app-token@v1
         with:
-            app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
-            private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
-            owner: EgorPopelyaev
+            app-id: ${{ vars.POLKADOT_SDK_RELEASE_RW_APP_ID }}
+            private-key: ${{ secrets.POLKADOT_SDK_RELEASE_RW_APP_KEY }}
+            owner: paritytech
             repositories: polkadot-sdk
 
       - name: Upload ${{ matrix.binary }} binary to release draft
@@ -221,13 +221,13 @@ jobs:
         run: |
           if [[ ${{ matrix.target }} == "aarch64-apple-darwin" ]]; then
             gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-              --repo EgorPopelyaev/polkadot-sdk \
+              --repo paritytech/polkadot-sdk \
               ${{ matrix.binary }}-aarch64-apple-darwin \
               ${{ matrix.binary }}-aarch64-apple-darwin.asc \
               ${{ matrix.binary }}-aarch64-apple-darwin.sha256
           else
             gh release upload ${{ needs.validate-inputs.outputs.release_tag }} \
-              --repo EgorPopelyaev/polkadot-sdk \
+              --repo paritytech/polkadot-sdk \
               ${{ matrix.binary }} \
               ${{ matrix.binary }}.asc \
               ${{ matrix.binary }}.sha256
@@ -252,4 +252,4 @@ jobs:
           server: m.parity.io
           message: |
             **New version of polkadot tagged**: ${{ needs.validate-inputs.outputs.release_tag }}<br/>
-            And release draft is release created in [polkadot-sdk repo](https://github.com/EgorPopelyaev/polkadot-sdk/releases)
+            And release draft is release created in [polkadot-sdk repo](https://github.com/paritytech/polkadot-sdk/releases)
