--- a/polkadot/node/network/collator-protocol/Cargo.toml
+++ b/polkadot/node/network/collator-protocol/Cargo.toml
@@ -31,6 +31,10 @@ polkadot-node-subsystem-util = { workspace = true, default-features = true }
 polkadot-primitives = { workspace = true, default-features = true }
 thiserror = { workspace = true }
 tokio-util = { workspace = true }
+# This should have really been a dev-dependency but clippy is complaining that it's not used with
+# experimental-collator-protocol disabled, while the rust compiler claims that having optional
+# dev-dependencies is not possible.
+tokio = { features = ["macros"], workspace = true, default-features = true, optional = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
@@ -42,11 +46,10 @@ sc-keystore = { workspace = true, default-features = true }
 sc-network = { workspace = true, default-features = true }
 sp-core = { features = ["std"], workspace = true, default-features = true }
 sp-keyring = { workspace = true, default-features = true }
-tokio = { features = ["macros"], workspace = true, default-features = true }
 
 polkadot-node-subsystem-test-helpers = { workspace = true }
 polkadot-primitives-test-helpers = { workspace = true }
 
 [features]
 default = []
-experimental-collator-protocol = ["async-trait"]
+experimental-collator-protocol = ["async-trait", "tokio"]
