--- a/substrate/frame/staking-async/ahm-test/Cargo.toml
+++ b/substrate/frame/staking-async/ahm-test/Cargo.toml
@@ -22,6 +22,7 @@ frame-support = { workspace = true, default-features = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true, default-features = true }
 sp-session = { workspace = true, default-features = true }
+sp-core = { workspace = true, default-features = true }
 sp-staking = { workspace = true, default-features = true }
 sp-tracing = { workspace = true, default-features = true }
 
