--- a/Cargo.toml
+++ b/Cargo.toml
@@ -623,7 +623,7 @@ asset-test-utils = { path = "cumulus/parachains/runtimes/assets/test-utils", def
 assets-common = { path = "cumulus/parachains/runtimes/assets/common", default-features = false, version = "0.19.1" }
 async-channel = { version = "1.8.0" }
 async-std = { version = "1.9.0" }
-async-trait = { version = "0.1.79" }
+async-trait = { version = "0.1.88" }
 asynchronous-codec = { version = "0.6" }
 backoff = { version = "0.4" }
 backtrace = { version = "0.3.71" }
@@ -846,7 +846,7 @@ linked-hash-map = { version = "0.5.4" }
 linked_hash_set = { version = "0.1.4" }
 linregress = { version = "0.5.1" }
 lite-json = { version = "0.2.0", default-features = false }
-litep2p = { version = "0.9.3", features = ["websocket"] }
+litep2p = { git = "https://github.com/paritytech/litep2p.git", branch = "lexnv/test-upcoming-0.9.4", features = ["websocket"] }
 log = { version = "0.4.22", default-features = false }
 macro_magic = { version = "0.5.1" }
 maplit = { version = "1.0.2" }
