--- a/substrate/test-utils/runtime/Cargo.toml
+++ b/substrate/test-utils/runtime/Cargo.toml
@@ -16,42 +16,38 @@ workspace = true
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-sp-application-crypto = { features = [
-  "serde",
-], workspace = true }
-sp-consensus-aura = { features = ["serde"], workspace = true }
-sp-consensus-babe = { features = ["serde"], workspace = true }
-sp-genesis-builder = { workspace = true }
-sp-block-builder = { workspace = true }
 codec = { features = ["derive"], workspace = true }
-scale-info = { features = ["derive"], workspace = true }
-sp-debug-derive = { workspace = true, default-features = false, features = [
-  "force-debug",
-] }
-sp-inherents = { workspace = true }
-sp-keyring = { workspace = true }
-sp-offchain = { workspace = true }
-sp-core = { features = ["serde"], workspace = true }
-sp-crypto-hashing = { workspace = true }
-sp-io = { workspace = true }
-frame-support = { workspace = true }
-sp-version = { workspace = true }
-sp-session = { workspace = true }
-sp-api = { workspace = true }
-sp-runtime = { features = ["serde"], workspace = true }
-pallet-babe = { workspace = true }
-pallet-balances = { workspace = true }
 frame-executive = { workspace = true }
 frame-metadata-hash-extension = { workspace = true }
+frame-support = { workspace = true }
 frame-system = { workspace = true }
 frame-system-rpc-runtime-api = { workspace = true }
+pallet-babe = { workspace = true }
+pallet-balances = { workspace = true }
 pallet-timestamp = { workspace = true }
 sc-service = { optional = true, workspace = true }
+scale-info = { features = ["derive"], workspace = true }
+sp-api = { workspace = true }
+sp-application-crypto = { features = ["serde"], workspace = true }
+sp-block-builder = { workspace = true }
+sp-consensus-aura = { features = ["serde"], workspace = true }
+sp-consensus-babe = { features = ["serde"], workspace = true }
 sp-consensus-grandpa = { features = ["serde"], workspace = true }
+sp-core = { features = ["serde"], workspace = true }
+sp-crypto-hashing = { workspace = true }
+sp-debug-derive = { workspace = true, default-features = false, features = ["force-debug"] }
 sp-externalities = { workspace = true }
+sp-genesis-builder = { workspace = true }
+sp-inherents = { workspace = true }
+sp-io = { workspace = true }
+sp-keyring = { workspace = true }
+sp-offchain = { workspace = true }
+sp-runtime = { features = ["serde"], workspace = true }
+sp-session = { workspace = true }
 sp-state-machine = { workspace = true }
 sp-transaction-pool = { workspace = true }
 sp-trie = { workspace = true }
+sp-version = { workspace = true }
 trie-db = { workspace = true }
 
 # 3rd party
@@ -73,55 +69,53 @@ sp-tracing = { workspace = true, default-features = true }
 substrate-test-runtime-client = { workspace = true }
 
 [build-dependencies]
-substrate-wasm-builder = { optional = true, features = [
-  "metadata-hash",
-], workspace = true, default-features = true }
+substrate-wasm-builder = { optional = true, features = ["metadata-hash"], workspace = true, default-features = true }
 
 [features]
 default = ["std"]
 
 std = [
-    "array-bytes",
-    "codec/std",
-    "frame-executive/std",
-    "frame-metadata-hash-extension/std",
-    "frame-support/std",
-    "frame-system-rpc-runtime-api/std",
-    "frame-system/std",
-    "log/std",
-    "pallet-babe/std",
-    "pallet-balances/std",
-    "pallet-timestamp/std",
-    "sc-executor/std",
-    "sc-service",
-    "scale-info/std",
-    "serde/std",
-    "serde_json/std",
-    "sp-api/std",
-    "sp-application-crypto/std",
-    "sp-block-builder/std",
-    "sp-consensus-aura/std",
-    "sp-consensus-babe/std",
-    "sp-consensus-grandpa/std",
-    "sp-core/std",
-    "sp-crypto-hashing/std",
-    "sp-debug-derive/std",
-    "sp-externalities/std",
-    "sp-genesis-builder/std",
-    "sp-inherents/std",
-    "sp-io/std",
-    "sp-keyring/std",
-    "sp-offchain/std",
-    "sp-runtime/std",
-    "sp-session/std",
-    "sp-state-machine/std",
-    "sp-tracing/std",
-    "sp-transaction-pool/std",
-    "sp-trie/std",
-    "sp-version/std",
-    "substrate-wasm-builder",
-    "tracing/std",
-    "trie-db/std",
+	"array-bytes",
+	"codec/std",
+	"frame-executive/std",
+	"frame-metadata-hash-extension/std",
+	"frame-support/std",
+	"frame-system-rpc-runtime-api/std",
+	"frame-system/std",
+	"log/std",
+	"pallet-babe/std",
+	"pallet-balances/std",
+	"pallet-timestamp/std",
+	"sc-executor/std",
+	"sc-service",
+	"scale-info/std",
+	"serde/std",
+	"serde_json/std",
+	"sp-api/std",
+	"sp-application-crypto/std",
+	"sp-block-builder/std",
+	"sp-consensus-aura/std",
+	"sp-consensus-babe/std",
+	"sp-consensus-grandpa/std",
+	"sp-core/std",
+	"sp-crypto-hashing/std",
+	"sp-debug-derive/std",
+	"sp-externalities/std",
+	"sp-genesis-builder/std",
+	"sp-inherents/std",
+	"sp-io/std",
+	"sp-keyring/std",
+	"sp-offchain/std",
+	"sp-runtime/std",
+	"sp-session/std",
+	"sp-state-machine/std",
+	"sp-tracing/std",
+	"sp-transaction-pool/std",
+	"sp-trie/std",
+	"sp-version/std",
+	"substrate-wasm-builder",
+	"tracing/std",
+	"trie-db/std",
 ]
 
 # Special feature to disable logging
