--- a/cumulus/client/relay-chain-interface/Cargo.toml
+++ b/cumulus/client/relay-chain-interface/Cargo.toml
@@ -25,5 +25,5 @@ sp-version = { workspace = true }
 async-trait = { workspace = true }
 codec = { workspace = true, default-features = true }
 futures = { workspace = true }
-jsonrpsee-core = { workspace = true }
+jsonrpsee-core = { workspace = true, features = ["client"] }
 thiserror = { workspace = true }
