--- a/.github/workflows/release-20_build-rc.yml
+++ b/.github/workflows/release-20_build-rc.yml
@@ -25,11 +25,17 @@ jobs:
 
   sync-forks:
     needs: [check-synchronization]
-    if: ${{ needs.check-synchronization.outputs.checks_passed }} == 'true'
-    uses: paritytech-release/sync-workflows/.github/workflows/sync-with-upstream.yml@main
+    if: ${{ needs.check-synchronization.outputs.checks_passed }} == 'false'
+    uses: paritytech-release/sync-workflows/.github/workflows/sync-with-upstream.yml@ep-add-sync-confirmation
+    with:
+      fork_writer_app_id: ${{ vars.UPSTREAM_CONTENT_SYNC_APP_ID }}
+      fork_owner: ${{ vars.RELEASE_ORG }}
+    secrets:
+      fork_writer_app_key: ${{ secrets.UPSTREAM_CONTENT_SYNC_APP_KEY }}
 
   validate-inputs:
-    needs: [sync-forks]
+    needs: [check-synchronization, sync-forks]
+    if: ${{ needs.check-synchronization.outputs.checks_passed }} == 'true' || ${{ needs.sync-forks.outputs.branches_synced }} == 'true'
     runs-on: ubuntu-latest
     outputs:
         release_tag: ${{ steps.validate_inputs.outputs.release_tag }}
